# ollamonym

./: .gitignore  Dockerfile  IMPLEMENTATION.md  README.md  README_IMPLEMENTATION.md  docker-compose.yml  pyproject.toml  requirements.txt  spec_readme.md
app/: __init__.py  config.py  main.py
app/llm/: inference_queue.py  ollama_client.py
app/pipeline/: alias_postpass.py  chunker.py  deanonymizer.py  detector.py  normalizer.py  rendering.py  rule_extractor.py  span_resolver.py  tokenization.py
app/schemas/: __init__.py  models.py
app/templates/: compiler.py  loader.py  registry.py  validator.py
app/utils/: hashing.py  text_norm.py
app/web/: app.css  app.js  demo.html  index.html
templates/: default-pii-qwen2.5-14b-v1.json  default-pii-qwen2.5-7b-v1.json  default-pii-v1.json
tests/: test_acceptance.py
